--- a/beginner/projects/jquery-practical-tasks/css/style.css
+++ b/beginner/projects/jquery-practical-tasks/css/style.css
@@ -60,6 +60,26 @@ img {
 
 .header-nav-link {
   color: #fff;
+  cursor: pointer;
+}
+
+.header-nav-link-sub {
+  color: #fff;
+}
+
+.header-nav-list-sub {
+  background-color: rgba(0, 0, 0, 0.25);
+  position: absolute;
+  top: calc(100% + 1px);
+  left: 50%;
+  transform: translateX(-50%);
+  word-break: keep-all;
+  padding: 12px;
+  display: none;
+}
+
+.header-nav-item-sub + .header-nav-item-sub {
+  margin-top: 8px;
 }
 
 /* ファーストビュー */
@@ -248,12 +268,41 @@ img {
     gap: 40px;
   }
 
+  .header-nav-item {
+    position: relative;
+  }
+
   .header-nav-link {
     transition: opacity 0.3s;
   }
 
   .header-nav-link:hover {
     opacity: 0.7;
+    cursor: pointer;
+  }
+
+  .header-nav-list-sub {
+    background-color: rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: calc(100% + 22px);
+    left: 50%;
+    transform: translateX(-50%);
+    word-break: keep-all;
+    padding: 12px;
+    display: none;
+  }
+
+  .header-nav-list-sub.is-open {
+    display: block;
+  }
+
+  .header-nav-item-sub + .header-nav-item-sub {
+    margin-top: 8px;
+  }
+
+  .header-nav-link-sub:hover {
+    opacity: 0.7;
+    cursor: pointer;
   }
 
   /* About */
