--- a/beginner/projects/jquery-practical-tasks/css/style.css
+++ b/beginner/projects/jquery-practical-tasks/css/style.css
@@ -229,6 +229,21 @@ img {
   font-size: 12px;
 }
 
+/* TOPへ戻るボタン */
+.top-back {
+  border: none;
+  width: 56px;
+  height: 56px;
+  display: block;
+  border-radius: 50%;
+  background-color: white;
+  font-weight: bold;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  box-shadow: 0px 0px 15px -5px #777777;
+}
+
 /* ダブレット、PCサイズの表示 */
 @media screen and (min-width: 768px) {
   /* 共通クラス */
@@ -383,5 +398,12 @@ img {
 
   .footer-copyright {
     font-size: 13px;
+  }
+
+  /* TOPへ戻るボタン */
+  .top-back:hover {
+    opacity: 0.7;
+    transition: opacity 0.3s;
+    cursor: pointer;
   }
 }
