--- a/beginner/projects/jquery-practical-tasks/css/style.css
+++ b/beginner/projects/jquery-practical-tasks/css/style.css
@@ -113,6 +113,25 @@ img {
   padding: 80px 0;
 }
 
+.menu-modal-bg {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+
+.menu-modal-bg img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 90%;
+  height: auto;
+}
+
 .menu-item + .menu-item {
   margin-top: 62px;
 }
@@ -359,6 +378,14 @@ img {
 
   .menu-item + .menu-item {
     margin-top: 0;
+  }
+
+  .menu-img:hover {
+    cursor: pointer;
+  }
+
+  .menu-modal-bg img {
+    max-width: 60%;
   }
 
   /* Shop */
