--- a/beginner/study/practice-sass/scss/style.scss
+++ b/beginner/study/practice-sass/scss/style.scss
@@ -26,6 +26,25 @@
 /* <<< 子要素の入れ子 */
 
 /* >>> 孫要素の入れ子 */
+// .lists {
+//   list-style: none;
+//   padding: 0;
+//   margin: 0;
+//   display: flex;
+
+//   li {
+//     width: 25%;
+//     text-align: center;
+
+//     a {
+//       color: #333;
+//       font-size: 16px;
+//     }
+//   }
+// }
+/* <<< 孫要素の入れ子 */
+
+/* >>> 疑似要素の書き方 */
 .lists {
   list-style: none;
   padding: 0;
@@ -39,7 +58,13 @@
     a {
       color: #333;
       font-size: 16px;
+      &:hover {
+        color: #da1e32;
+      }
+      &.active {
+        color: #da1e32;
+      }
     }
   }
 }
-/* <<< 孫要素の入れ子 */
+/* <<< 疑似要素の書き方 */
