--- a/beginner/study/practice-sass/scss/style.scss
+++ b/beginner/study/practice-sass/scss/style.scss
@@ -1,3 +1,9 @@
+/* >>> 変数 */
+$link-color-active: #da1e32;
+$link-color-base: #333;
+$link-font-size: 16px;
+/* <<< 変数 */
+
 /* >>> 課題1 - Sassで装飾してみよう */
 
 // .listsクラスに対してulの標準ドットやpadding,marginを打ち消して、横並びにする
@@ -56,13 +62,14 @@
     text-align: center;
 
     a {
-      color: #333;
-      font-size: 16px;
+      color: $link-color-base;
+      font-size: $link-font-size;
       &:hover {
-        color: #da1e32;
+        color: $link-color-active;
       }
       &.active {
-        color: #da1e32;
+        color: $link-color-active;
+        font-size: $link-font-size + 10px;
       }
     }
   }
