--- a/beginner/study/practice-sass/css/style.css
+++ b/beginner/study/practice-sass/css/style.css
@@ -1,6 +1,18 @@
 @charset "UTF-8";
 /* >>> 変数 */
 /* <<< 変数 */
+/* >>> 定義したスタイルを使い回す */
+.button, .lists li a {
+  color: #333;
+  font-size: 16px;
+  display: inline-block;
+  margin-top: 20px;
+  padding: 8px 16px;
+  border: 1px solid #333;
+  text-decoration: none;
+}
+
+/* <<< 定義したスタイルを使い回す */
 /* >>> 課題1 - Sassで装飾してみよう */
 /* <<< 課題1 - Sassで装飾してみよう */
 /* >>> 子要素の入れ子 */
