--- a/beginner/study/practice-sass/scss/style.scss
+++ b/beginner/study/practice-sass/scss/style.scss
@@ -4,7 +4,7 @@ $link-color-base: #333;
 $link-font-size: 16px;
 /* <<< 変数 */
 
-/* >>> 定義したスタイルを使い回す */
+/* >>> extend 定義したスタイルを使い回す */
 .button {
   color: #333;
   font-size: 16px;
@@ -14,7 +14,19 @@ $link-font-size: 16px;
   border: 1px solid #333;
   text-decoration: none;
 }
-/* <<< 定義したスタイルを使い回す */
+/* <<< extend 定義したスタイルを使い回す */
+
+/* >>> mixin 引数を使ったスタイルの使いまわし */
+@mixin button($font-size) {
+  color: #333;
+  font-size: $font-size;
+  display: inline-block;
+  margin-top: 20px;
+  padding: 8px 16px;
+  border: 1px solid #333;
+  text-decoration: none;
+}
+/* <<< mixin 引数を使ったスタイルの使いまわし */
 
 /* >>> 課題1 - Sassで装飾してみよう */
 
@@ -76,7 +88,8 @@ $link-font-size: 16px;
     a {
       color: $link-color-base;
       font-size: $link-font-size;
-      @extend .button;
+      // @extend .button;
+      @include button(16px);
 
       &:hover {
         color: $link-color-active;
@@ -88,4 +101,5 @@ $link-font-size: 16px;
     }
   }
 }
+
 /* <<< 疑似要素の書き方 */
