--- a/beginner/study/practice-sass/css/style.css
+++ b/beginner/study/practice-sass/css/style.css
@@ -51,4 +51,6 @@
   font-size: 26px;
 }
 
-/* <<< 疑似要素の書き方 *//*# sourceMappingURL=style.css.map */
+/* <<< 疑似要素の書き方 */
+/* >>> ブレイクポイントのmixinについて */
+/* <<< ブレイクポイントのmixinについて *//*# sourceMappingURL=style.css.map */
