--- a/beginner/study/practice-sass/scss/style.scss
+++ b/beginner/study/practice-sass/scss/style.scss
@@ -105,11 +105,6 @@ $link-font-size: 16px;
 /* <<< 疑似要素の書き方 */
 
 /* >>> ブレイクポイントのmixinについて */
-//　従来のメディアクエリ
-@media screen and( min-width:768px) {
-}
-
-// Sassのmixinを使う
 
 // サンプルコード
 //マップ型変数breakpointsを定義
@@ -142,3 +137,15 @@ $breakpoints: (
 PC用のcssを書きながらスマホ用の表示を書き足すことができます！ */
 
 /* <<< ブレイクポイントのmixinについて */
+
+/* >>> functionについて */
+// 関数の定義
+@function activeFontSize($base-size) {
+  @return $base-size + 2px;
+}
+
+// 関数の呼び出し
+p {
+  font-size: activeFontSize($link-font-size);
+}
+/* <<< functionについて */
