--- a/beginner/projects/sweet-delight-sass-change/css/style.css
+++ b/beginner/projects/sweet-delight-sass-change/css/style.css
@@ -118,3 +118,38 @@ img {
 }
 
 /* <<< 共通スタイル */
+/* >>> header */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid rgba(241, 238, 228, 0.25);
+  width: 100%;
+  text-align: center;
+  padding: 12px;
+}
+
+.header-logo {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.header-nav {
+  margin-top: 10px;
+}
+
+.header-nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 22px;
+}
+
+.header-nav-link {
+  color: #fff;
+}
+
+/* <<< header */
