--- a/beginner/projects/sweet-delight-sass-change/css/style.css
+++ b/beginner/projects/sweet-delight-sass-change/css/style.css
@@ -153,3 +153,156 @@ img {
 }
 
 /* <<< header */
+/* >>> Footer */
+.footer {
+  color: #fff;
+  background-color: #3c301e;
+  text-align: center;
+  padding-top: 46px;
+}
+
+.footer-logo {
+  width: 200px;
+  margin: 0 auto;
+}
+
+.footer-text {
+  font-size: 12px;
+}
+
+.footer-nav-list {
+  padding: 0 20px;
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 24px;
+}
+
+.sns-img {
+  width: 56px;
+}
+
+.footer-nav-link-text {
+  font-size: 12px;
+  margin-top: 12px;
+}
+
+.footer-copy-wrapper {
+  border-top: 1px solid rgba(241, 238, 228, 0.25);
+  padding: 12px;
+  margin-top: 46px;
+}
+
+.footer-copyright {
+  font-size: 12px;
+}
+
+/* <<< Footer */
+/* >>> TOPページ */
+/* ファーストビュー */
+.fv-picture img {
+  width: 100%;
+}
+
+/* Aboutセクション */
+.about {
+  padding: 40px 0;
+  background-color: #f1eee4;
+}
+
+.about-text-contents {
+  margin-top: 20px;
+}
+
+.about-text {
+  font-size: 14px;
+  line-height: 2;
+}
+
+.about-text + .about-text {
+  margin-top: 16px;
+}
+
+/* Menuセクション */
+.menu {
+  background-color: #f1eee4;
+  padding: 80px 0;
+}
+
+.menu-item + .menu-item {
+  margin-top: 62px;
+}
+
+.menu-text-contents {
+  text-align: center;
+  padding: 16px 10px;
+}
+
+.menu-name-main {
+  font-size: 18px;
+  display: block;
+}
+
+.menu-name-sub {
+  color: #a98c5f;
+  font-size: 12px;
+  display: block;
+  margin-top: 8px;
+}
+
+.menu-text {
+  font-size: 14px;
+  color: #a98c5f;
+  margin-top: 16px;
+}
+
+/* Shopセクション */
+.shop {
+  background-image: url("../img/sp/bg-shop.png");
+  background-position: center center;
+  background-size: cover;
+  padding: 80px 0;
+}
+
+.shop-inner {
+  padding: 0 20px;
+}
+
+.shop-text {
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+  line-height: 2;
+}
+
+/* Form */
+.form {
+  margin-top: 40px;
+}
+
+.form-input {
+  width: 100%;
+  border-radius: 4px;
+  background-color: rgba(255, 255, 255, 0.7);
+  font-family: "Josefin Sans", "Noto Sans JP", sans-serif;
+  border: none;
+  padding: 14px;
+}
+
+.form-submit {
+  font-family: "Josefin Sans", "Noto Sans JP", sans-serif;
+  border-radius: 4px;
+  border: none;
+  display: block;
+  margin: 10px auto 0;
+  width: 120px;
+  padding: 12px 10px;
+  color: #fff;
+  background-color: #a98c5f;
+}
+
+/* <<< TOPページ */
