--- a/beginner/projects/sweet-delight-sass-change/scss/page/top/_index.scss
+++ b/beginner/projects/sweet-delight-sass-change/scss/page/top/_index.scss
@@ -1,3 +1,4 @@
+@use "../../global/" as g;
 /* >>> TOPページ */
 
 /* ファーストビュー */
@@ -9,29 +10,68 @@
 .about {
   padding: 40px 0;
   background-color: #f1eee4;
+  @include g.mq("pc") {
+    padding: 100px 0;
+  }
+}
+
+.about-contents {
+  @include g.mq("pc") {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+  }
 }
 
 .about-text-contents {
   margin-top: 20px;
+  @include g.mq("pc") {
+    margin-top: 0;
+  }
+}
+
+.about-img {
+  @include g.mq("pc") {
+    width: 300px;
+  }
 }
 
 .about-text {
   font-size: 14px;
   line-height: 2;
+  @include g.mq("pc") {
+    font-size: 15px;
+  }
 }
 
 .about-text + .about-text {
   margin-top: 16px;
+  @include g.mq("pc") {
+    margin-top: 30px;
+  }
 }
 
 /* Menuセクション */
 .menu {
   background-color: #f1eee4;
   padding: 80px 0;
+  @include g.mq("pc") {
+    padding: 0 0 100px;
+  }
+}
+
+.menu-list {
+  @include g.mq("pc") {
+    display: flex;
+    gap: 20px;
+  }
 }
 
 .menu-item + .menu-item {
   margin-top: 62px;
+  @include g.mq("pc") {
+    margin-top: 0;
+  }
 }
 
 .menu-text-contents {
@@ -63,10 +103,18 @@
   background-position: center center;
   background-size: cover;
   padding: 80px 0;
+  @include g.mq("pc") {
+    padding: 60px 0;
+    background-image: url("../img/bg-shop.png");
+  }
 }
 
 .shop-inner {
   padding: 0 20px;
+  @include g.mq("pc") {
+    max-width: 600px;
+    margin: 0 auto;
+  }
 }
 
 .shop-text {
@@ -79,6 +127,10 @@
 /* Form */
 .form {
   margin-top: 40px;
+  @include g.mq("pc") {
+    display: flex;
+    gap: 20px;
+  }
 }
 
 .form-input {
@@ -100,6 +152,16 @@
   padding: 12px 10px;
   color: #fff;
   background-color: #a98c5f;
+
+  @include g.mq("pc") {
+    margin-top: 0;
+
+    &:hover {
+      opacity: 0.7;
+      transition: opacity 0.3s;
+      cursor: pointer;
+    }
+  }
 }
 
 /* <<< TOPページ */
