--- a/beginner/projects/simple-portfolio-site/scss/global/setting/_color.scss
+++ b/beginner/projects/simple-portfolio-site/scss/global/setting/_color.scss
@@ -1,1 +1,8 @@
-$color-red: red;
+$white: #fff;
+$black: #000;
+$cl-black: #333;
+$cl-dark: #4a4a4a;
+$dbg-middle: #a98c5f;
+$bg-light: #fafafa;
+$cl-border: #808080;
+$bg-gray-l: #6f6f6f;
