--- a/beginner/projects/simple-portfolio-site/css/style.css
+++ b/beginner/projects/simple-portfolio-site/css/style.css
@@ -1,8 +1,5 @@
 @charset "UTF-8";
 /* >>> Reset CSS */
-/*
-  1. より直感的なボックスサイズのモデルを使用
-*/
 *,
 *::before,
 *::after {
@@ -10,34 +7,46 @@
           box-sizing: border-box;
 }
 
-/*
-  2. デフォルトのマージンを削除
-*/
 * {
   margin: 0;
 }
 
-/*
-  3. 高さは%ベースを使用
-*/
+html,
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+dl,
+li,
+dt,
+dd,
+p,
+div,
+span,
+img,
+a,
+table,
+tr,
+th,
+td {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-weight: normal;
+  font-size: 100%;
+  vertical-align: baseline;
+}
+
 html,
 body {
   height: 100%;
 }
 
-/*
-  タイポグラフィの微調整
-  4. アクセシブルなline-heightを追加
-  5. テキストのレンダリングを改善
-*/
-body {
-  line-height: 1.5;
-  -webkit-font-smoothing: antialiased;
-}
-
-/*
-  6. メディア要素のデフォルトを改善
-*/
 img,
 picture,
 video,
@@ -45,11 +54,9 @@ canvas,
 svg {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
-/*
-  7. フォームのfontに関するデフォルトを削除
-*/
 input,
 button,
 textarea,
@@ -57,9 +64,6 @@ select {
   font: inherit;
 }
 
-/*
-  8. テキストのオーバーフローを回避
-*/
 p,
 h1,
 h2,
@@ -70,9 +74,17 @@ h6 {
   overflow-wrap: break-word;
 }
 
-/*
-  9. ルートのスタックコンテキストを作成
-*/
+ol,
+ul {
+  list-style: none;
+  list-style-type: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 /* <<< Reset CSS */
 /* >>> base - サイト共通のスタイル */
 html,
