--- a/beginner/projects/simple-portfolio-site/scss/component/_button.scss
+++ b/beginner/projects/simple-portfolio-site/scss/component/_button.scss
@@ -1,1 +1,18 @@
 @use "../global" as g;
+
+.button {
+}
+
+.button__icon {
+}
+
+.button__icon-path {
+  fill: g.$white;
+
+  &--contact {
+    fill: g.$bg-dark;
+  }
+}
+
+.button__text {
+}
