--- a/beginner/projects/simple-portfolio-site/scss/base/_base.scss
+++ b/beginner/projects/simple-portfolio-site/scss/base/_base.scss
@@ -10,6 +10,7 @@ body {
 body {
   font-family: g.$font-family;
   color: g.$cl-black;
+  font-size: g.$base-font-size;
 }
 
 /* <<< base - サイト共通のスタイル */
