--- a/beginner/projects/simple-portfolio-site/scss/component/_button.scss
+++ b/beginner/projects/simple-portfolio-site/scss/component/_button.scss
@@ -1,9 +1,33 @@
 @use "../global" as g;
 
 .button {
+  display: flex;
+  align-items: center;
+  padding: 6px 10px 6px 30px;
+  width: 160px;
+  margin: 0 auto;
+
+  &--bg {
+    background-color: g.$white;
+
+    .button__text {
+      color: g.$bg-dark;
+    }
+  }
+
+  &--border {
+    border: 1px solid g.$white;
+
+    .button__text {
+      color: g.$white;
+    }
+  }
 }
 
 .button__icon {
+  width: 24px;
+  display: flex;
+  align-items: center;
 }
 
 .button__icon-path {
@@ -15,4 +39,8 @@
 }
 
 .button__text {
+  margin-left: 10px;
+  font-size: 16px;
+  letter-spacing: 0.08em;
+  color: g.$white;
 }
