--- a/beginner/projects/simple-portfolio-site/css/style.css
+++ b/beginner/projects/simple-portfolio-site/css/style.css
@@ -200,3 +200,30 @@ body.is-fixed {
 .header__nav-item + .header__nav-item {
   margin-top: 24px;
 }
+
+.fv {
+  position: relative;
+}
+
+.fv__contents {
+  position: absolute;
+  bottom: 26px;
+  left: 0;
+  width: 100%;
+  height: 209px;
+  background: url("../img/sp/bg_fv.png") center center no-repeat;
+  background-size: 100% auto;
+  padding: 32px;
+}
+
+.fv__heading-main {
+  display: block;
+  font-size: 40px;
+  letter-spacing: 0.1em;
+}
+
+.fv__heading-sub {
+  margin-top: 12px;
+  display: block;
+  font-size: 14px;
+}
