--- a/beginner/projects/simple-portfolio-site/css/style.css
+++ b/beginner/projects/simple-portfolio-site/css/style.css
@@ -312,3 +312,25 @@ body.is-fixed {
   text-decoration: underline;
   font-size: 14px;
 }
+
+.about__img img {
+  -webkit-box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+}
+
+.about__text {
+  font-size: 16px;
+  line-height: 1.6;
+}
+
+.about__text + .about__text {
+  margin-top: 1em;
+}
+
+.works__item-img {
+  margin-bottom: 12px;
+}
+.works__item-img img {
+  -webkit-box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+}
