--- a/beginner/projects/simple-portfolio-site/css/style.css
+++ b/beginner/projects/simple-portfolio-site/css/style.css
@@ -212,6 +212,9 @@ body.is-fixed {
 .section__head {
   margin-bottom: 32px;
 }
+.section__head--center {
+  text-align: center;
+}
 
 .section__head-main {
   display: block;
@@ -231,6 +234,16 @@ body.is-fixed {
 
 .section__contents {
   margin-top: 40px;
+}
+
+.footer {
+  text-align: center;
+  padding: 10px;
+}
+
+.footer__copy {
+  font-size: 11px;
+  font-family: "Oswald", "Noto Sans JP", sans-serif;
 }
 
 .fv {
@@ -407,4 +420,18 @@ body.is-fixed {
 .message__text {
   font-size: 16px;
   line-height: 1.6;
+}
+
+.page-bottom {
+  color: #fff;
+}
+
+.page-bottom__item {
+  padding: 40px;
+}
+.page-bottom__item--contact {
+  background-color: #6f6f6f;
+}
+.page-bottom__item--twitter {
+  background-color: #4a4a4a;
 }
