--- a/beginner/projects/simple-portfolio-site/scss/module/_footer.scss
+++ b/beginner/projects/simple-portfolio-site/scss/module/_footer.scss
@@ -1,1 +1,11 @@
 @use "../global/" as g;
+
+.footer {
+  text-align: center;
+  padding: 10px;
+}
+
+.footer__copy {
+  font-size: 11px;
+  font-family: g.$font-family;
+}
