--- a/beginner/projects/simple-portfolio-site/css/style.css
+++ b/beginner/projects/simple-portfolio-site/css/style.css
@@ -114,8 +114,28 @@ body.is-fixed {
   width: 160px;
   margin: 0 auto;
 }
+@media screen and (min-width:768px) {
+  .button {
+    -webkit-transition: background 0.3s, color 0.3s, opacity 0.3s;
+    transition: background 0.3s, color 0.3s, opacity 0.3s;
+  }
+  .button:hover {
+    background-color: #fff;
+  }
+  .button:hover .button__icon-path {
+    fill: #4a4a4a;
+  }
+  .button:hover .button__text {
+    color: #4a4a4a;
+  }
+}
 .button--bg {
   background-color: #fff;
+}
+@media screen and (min-width:768px) {
+  .button--bg:hover {
+    opacity: 0.7;
+  }
 }
 .button--bg .button__text {
   color: #4a4a4a;
@@ -151,6 +171,21 @@ body.is-fixed {
   color: #fff;
 }
 
+@media screen and (min-width:768px) {
+  .wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media screen and (min-width:768px) {
+  .main {
+    -ms-flex-preferred-size: 79.2%;
+        flex-basis: 79.2%;
+  }
+}
+
 .header {
   background-color: #4a4a4a;
   position: fixed;
@@ -159,9 +194,25 @@ body.is-fixed {
   width: 100%;
   z-index: 999;
 }
+@media screen and (min-width:768px) {
+  .header {
+    position: relative;
+    -ms-flex-preferred-size: 20.8%;
+        flex-basis: 20.8%;
+    padding: 50px 20px;
+  }
+}
 
 .header__container {
   position: relative;
+}
+@media screen and (min-width:768px) {
+  .header__container {
+    position: sticky;
+    width: 160px;
+    margin: 0 auto;
+    top: 50px;
+  }
 }
 
 .header__logo {
@@ -169,6 +220,13 @@ body.is-fixed {
   padding: 14px 24px;
   font-size: 20px;
   color: #fff;
+}
+@media screen and (min-width:768px) {
+  .header__logo {
+    font-size: 30px;
+    letter-spacing: 0.12em;
+    line-height: 1;
+  }
 }
 
 .header__menu-button {
@@ -186,6 +244,11 @@ body.is-fixed {
   background-size: 100% auto;
   background-color: inherit;
 }
+@media screen and (min-width:768px) {
+  .header__menu-button {
+    display: none;
+  }
+}
 .header__menu-button.is-active {
   background-image: url("../img/bg_menu-close.png");
 }
@@ -195,6 +258,12 @@ body.is-fixed {
   height: calc(100vh - 88px);
   border-top: 1px solid #fff;
   padding-top: 60px;
+}
+@media screen and (min-width:768px) {
+  .header__contents {
+    display: block;
+    border: none;
+  }
 }
 
 .header__nav-item + .header__nav-item {
