--- a/beginner/projects/simple-portfolio-site/scss/global/setting/_breakpoints.scss
+++ b/beginner/projects/simple-portfolio-site/scss/global/setting/_breakpoints.scss
@@ -1,6 +1,6 @@
 $breakpoints: (
   // 767px(スマホ用の表示)
   "sp": "screen and (max-width:767px)",
-  // 767px(PC用の表示)
+  "tab": "screen and (min-width: 768px) and (max-width: 1024px)",
   "pc": "screen and (min-width:768px)"
 );
