--- a/beginner/projects/simple-portfolio-site/scss/page/top/_service.scss
+++ b/beginner/projects/simple-portfolio-site/scss/page/top/_service.scss
@@ -4,6 +4,11 @@
 }
 
 .service__list {
+  @include g.mq("pc") {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 8%;
+  }
 }
 
 .service__item {
@@ -11,6 +16,9 @@
 
 .service__item + .service__item {
   margin-top: 40px;
+  @include g.mq("pc") {
+    margin: 0;
+  }
 }
 
 .service__item-img {
