--- a/beginner/projects/simple-portfolio-site/scss/module/_section.scss
+++ b/beginner/projects/simple-portfolio-site/scss/module/_section.scss
@@ -1,13 +1,22 @@
+@use "../global/" as g;
+
 .section {
   padding: 48px 0;
 }
 
 .section__inner {
   padding: 0 32px;
+  @include g.mq("pc") {
+    max-width: calc(880px + 32px * 2);
+    margin: 0 auto;
+  }
 }
 
 .section__head {
   margin-bottom: 32px;
+  @include g.mq("pc") {
+    margin-bottom: 24px;
+  }
 
   &--center {
     text-align: center;
@@ -18,6 +27,9 @@
   display: block;
   font-size: 40px;
   letter-spacing: 0.1em;
+  @include g.mq("pc") {
+    font-size: 60px;
+  }
 }
 
 .section__head-sub {
