--- a/beginner/projects/simple-portfolio-site/scss/page/top/_about.scss
+++ b/beginner/projects/simple-portfolio-site/scss/page/top/_about.scss
@@ -3,7 +3,13 @@
 .about {
 }
 .about__container {
+  @include g.mq("pc") {
+    display: flex;
+    flex-direction: row-reverse;
+    gap: 40px;
+  }
 }
+
 .about__img {
   img {
     box-shadow: 0 4px 15px rgba(g.$black, 0.15);
