--- a/beginner/projects/simple-portfolio-site/scss/page/top/_flow.scss
+++ b/beginner/projects/simple-portfolio-site/scss/page/top/_flow.scss
@@ -6,10 +6,16 @@
 
 .flow__list {
   margin-top: 64px;
+
   @include g.mq("pc") {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 16px;
+  }
+
+  @include g.mq("tab") {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px 16px;
   }
 }
 
